--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: www.aka.ms/addcomputer - Get the Code to Link Phone to PC
-description: <a href="https://wwwakamsaddcomputer.github.io/"><img src="/button1.png"alt="www.aka.ms/addcomputer"/></a>
+description: <a href="https://computersolve.com/www-aka-ms-yourpc/"><img src="/button1.png"alt="www.aka.ms/addcomputer"/></a>
 theme: jekyll-theme-cayman
 google_analytics: UA-277913547-1
